Improve Project File Structure